--- a/lifemonitor/static/src/package.json
+++ b/lifemonitor/static/src/package.json
@@ -80,6 +80,7 @@
         "eslint-plugin-compat": "^6.0.2",
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-unicorn": "^28.0.2",
+        "husky": "^9.1.7",
         "lockfile-lint": "^4.6.2",
         "node-sass": "^7.0.0",
         "node-sass-package-importer": "^5.3.2",
