fix(logging): :wrench: suppress `inotify_logger` output

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,4 +8,4 @@ versionfile_source = lifemonitor/_version.py
 tag_prefix =
 
 [logging]
-filters = connexion,validator
+filters = connexion,validator,watchdog.observers.inotify_buffer
