--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,7 +6,7 @@ services:
   lm:
     user: "${USER_UID}:${USER_GID}"
     environment:
-      - "FLASK_ENV=development"
+      - "LIFEMONITOR_ENV=development"
       - "HOME=/lm"
       # Normally, OAuthLib will raise an InsecureTransportError if you attempt to use OAuth2 over HTTP,
       # rather than HTTPS. Setting this environment variable will prevent this error from being raised.
@@ -22,7 +22,7 @@ services:
   init:
     user: "${USER_UID}:${USER_GID}"
     environment:
-      - "FLASK_ENV=development"
+      - "LIFEMONITOR_ENV=development"
       # Normally, OAuthLib will raise an InsecureTransportError if you attempt to use OAuth2 over HTTP,
       # rather than HTTPS. Setting this environment variable will prevent this error from being raised.
       # This is mostly useful for local testing, or automated tests. Never set this variable in production.
@@ -34,7 +34,7 @@ services:
   worker:
     user: "${USER_UID}:${USER_GID}"
     environment:
-      - "FLASK_ENV=development"
+      - "LIFEMONITOR_ENV=development"
       - "WORKER_PROCESSES=1"
       - "WORKER_THREADS=1"
     volumes:
@@ -44,7 +44,7 @@ services:
   ws_server:
     user: "${USER_UID}:${USER_GID}"
     environment:
-      - "FLASK_ENV=development"
+      - "LIFEMONITOR_ENV=development"
     volumes:
       - "./:/lm"
       - "/lm/lifemonitor/static/dist"
@@ -81,7 +81,7 @@ services:
     env_file:
       - settings.conf
     environment:
-      - "FLASK_ENV=development"
+      - "LIFEMONITOR_ENV=development"
       - "SMEE_TARGET=https://lm:8000/integrations/github"
       - "NODE_EXTRA_CA_CERTS=/certs/ca.key"
       - "NODE_TLS_REJECT_UNAUTHORIZED=0"
