--- a/k8s/templates/settings.secret.yaml
+++ b/k8s/templates/settings.secret.yaml
@@ -8,7 +8,7 @@ type: Opaque
 stringData:
   settings.conf: |-
     # Environment settings
-    FLASK_ENV={{- .Values.lifemonitor.environment }}
+    LIFEMONITOR_ENV={{- .Values.lifemonitor.environment }}
     LOG_LEVEL={{- .Values.lifemonitor.log_level | default "INFO" }}
 
     # Set SECRET_KEY
