--- a/docker-compose.maintenance.yml
+++ b/docker-compose.maintenance.yml
@@ -17,7 +17,7 @@ services:
     env_file:
       - settings.conf
     environment:
-      - "FLASK_ENV=development"
+      - "LIFEMONITOR_ENV=development"
       - "TEMPLATES_AUTO_RELOAD=True"
       - "HOME=/lm"
       # Normally, OAuthLib will raise an InsecureTransportError if you attempt to use OAuth2 over HTTP,
@@ -39,7 +39,7 @@ services:
   init:
     user: "${USER_UID}:${USER_GID}"
     environment:
-      - "FLASK_ENV=development"
+      - "LIFEMONITOR_ENV=development"
       # Normally, OAuthLib will raise an InsecureTransportError if you attempt to use OAuth2 over HTTP,
       # rather than HTTPS. Setting this environment variable will prevent this error from being raised.
       # This is mostly useful for local testing, or automated tests. Never set this variable in production.
@@ -50,12 +50,12 @@ services:
   
   lm:
     environment:
-      - "FLASK_ENV=maintenance"
+      - "LIFEMONITOR_ENV=maintenance"
 
   ws_server:
     environment:
-      - "FLASK_ENV=maintenance"
+      - "LIFEMONITOR_ENV=maintenance"
   
   worker:
     environment:
-      - "FLASK_ENV=maintenance"
+      - "LIFEMONITOR_ENV=maintenance"
