--- a/k8s/templates/wss.deployment.yaml
+++ b/k8s/templates/wss.deployment.yaml
@@ -61,7 +61,7 @@ spec:
           env:
           {{- include "lifemonitor.common-env" . | nindent 12 }}
             {{- if  .Values.maintenanceMode.enabled }}
-            - name: FLASK_ENV
+            - name: LIFEMONITOR_ENV
               value: "maintenance"
             {{- end }}
           volumeMounts:
