--- a/settings.conf
+++ b/settings.conf
@@ -1,5 +1,5 @@
 # Set the Flask environment: production|development ('production' by default)
-FLASK_ENV=development
+LIFEMONITOR_ENV=development
 
 # Set the LOG_LEVEL
 LOG_LEVEL=INFO # default: 'INFO' on production, 'DEBUG' on development
