--- a/tests/settings.conf
+++ b/tests/settings.conf
@@ -1,5 +1,5 @@
 # environment properties
-#FLASK_ENV=development
+#LIFEMONITOR_ENV=development
 
 # Set the LOG_LEVEL
 # LOG_LEVEL=INFO # default: 'INFO' on production, 'DEBUG' on development
