chore(logging): :loud_sound: set the testing log level to WARNING

--- a/tests/settings.conf
+++ b/tests/settings.conf
@@ -2,7 +2,7 @@
 #LIFEMONITOR_ENV=development
 
 # Set the LOG_LEVEL
-# LOG_LEVEL=INFO # default: 'INFO' on production, 'DEBUG' on development
+LOG_LEVEL=WARNING # default: 'INFO' on production, 'DEBUG' on development
 
 # Override the default BASE_URL.
 # It is only used to build the links returned by the API
